[package]
name = "coney"
version = "0.1.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

[dependencies]
GSL = "1.1.0"
ndarray = "0.12.0"
ndarray-linalg = { version = "0.10.0", features = ["intel-mkl"] }
itertools = "0.8.0"
propeller = { path = "../propeller" }
math = { path = "../math" }